# maas_kontrol

./: .gitignore  .~lock.maas_verileri.xlsx#  01_kbs_personel_verileri.py  02_kbs_bordro_verileri.py  03_ikys_personel_verileri.py  04_verileri_raporla.py  Program_Calistir.py  README.md  aile_birey_bilgileri.py  calistir.py  emsan_veri_hazirla.py  hata_kodlari.py  hatalar_icin_aciklama_ekle.py  ikys_personel_verileri.py  kbs_bordro_verileri.py  kbs_personel_verileri.py  kontrol_raporu_hazirla.py  maas_verileri.ods  maas_verileri.xlsx  moduller.txt  pyproject.toml  read_excel.py  read_html.py  sabitler.py  test_test.py  verileri_raporla.py
banka/: Albaraka_OrnekMaasOdemeDosyasi.xlsx  albaraka_turk.xlsx  banka_listesi_olustur.py  iban_kontrol.py  kuveytturk.xlsx  yapikredi.xlsx  ziraat_katilim.xlsx  ziraat_katilim_diger.xlsx  ziraat_katilim_maas.xlsx
izle/: ornek_ikys_personel_sorgulama.webm  ornek_kbs_raporlar.webm
program/: ikys_verileri.py  kbs_verileri.py  read_excel.py  sabitler.ods  sabitler.py  test.py
